fix: fixed message sending from netcat and made the codebase Java 8 or higher compatible - Added default constructor for Message.java. - Added an empty input line check to prevent exceptions being thrown for empty lines or accidental enters. - Replace clientId.isBlank() with clientId.trim().isEmpty() to improve Java 8 compatability.